tests/frontend/pass/two_behaviours_on_two_contracts.act
contract D

contract C

constructor
interface constructor(uint24 _x)

creates

  uint24 x := _x

transition increase
interface increase(uint24 new_x)

  storage
    x

  returns pre(x)

ensures

  post(x) >= pre(x)

// Second contract, with same behaviour name
constructor
interface constructor(uint24 _x)

creates

  uint24 x := _x

transition increase
interface increase2(uint24 new_x)

storage
    x

  returns new_x

ensures

  post(x) >= pre(x)

