tests/frontend/fail/two_interfaces.act
// This is wrong because we have two behviours for the same interface
contract C

constructor(uint24 _x)

creates

  uint24 x := _x

transition increase(uint24 new_x) : uint24

  storage
    x

  returns pre(x)

ensures

  post(x) >= pre(x)

transition increase2(uint24 new_x) : uint24

storage
    x

  returns new_x

ensures

  post(x) >= pre(x)

